Changes to squid-2.5.STABLE9 ()

	- [Major] Assertion failures on certain odd DNS responses (Bug #1234)

Changes to squid-2.5.STABLE8 (11 Feb 2005)

	- [Minor] 100% CPU usage on half-closed PUT/POST requests (Bug #354,
	  #1096)
	- [Cosmetic] Document -v (protocol version) option to LDAP helpers
	- [Minor] The new req_header and resp_header acls segfaults
	  immediately on parse of squid.conf (Bug #961)
	- [Minor] Failure to shut down busy helpers on -k rotate/reconfigure
	  (Bug #1118)
	- [Minor] Don't use O_NONBLOCK on disk files. (Bug #1102)
	- [Minor] Squid fails to close TCP connection after blank HTTP
	  response (Bug #1116)
	- [Minor security] Random error messages in response to malformed
	  host name (Bug #1143)
	- [Minor] PURGE should not be able to delete internal objects
	  (Bug #1112)
	- [Minor] httpd_accel_port 0 (virtual) not working correctly (Bug
	  #1121)
	- [Minor] cachemgr vm_objects segfault (Bug #1149)
	- [Minor security] Confusing results on empty acl declarations (Bug
	  #1166)
	- [Minor] Don't close all "other" filedescriptors on startup (Bug
	  #1177)
	- [Minor] fakeauth_auth memory leak and NULL pointer access (Bug
	  #1183)
	- [Security] buffer overflow bug in gopherToHTML() (Bug #1189)
	- [Medium security] Denial of service with forged WCCP messages
	  (Bug #1190)
	- [Minor] DNS related memory leak on certain malformed DNS responses
	  (Bug #1197)
	- [Minor] Internal DNS sometimes truncates host names in reverse
	  (PTR) lookups (Bug #1136)
	- [Minor Security] Add sanity checks on LDAP user names (Bug #1187)
	- [Security] Harden Squid agains HTTP request smuggling attacks
	- [Minor] Icon URLs fails in non-anonymous FTP directory listings is
	  short_icon_urls is on (Bug #1203)
	- [Security] Harden Squid agains HTTP response splitting attacks
	  (Bug #1200)
	- [Medium security] Buffer overflow in WCCP recvfrom() call
	  (Bug #1217)
	- [Security] Properly handle oversized reply headers (Bug #1216)